--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dsh</title>
+  <title>Nico's Weather Widget</title>
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
@@ -37,15 +37,6 @@
 
     <!-- Time -->
     <section class="time">
-      <h1>Time</h1>
-      <time>
-        <data class="hours">HH</data> :
-        <data class="minutes">MM</data> :
-        <data class="seconds">SS</data>
-        <data class="amOrPM">AM/PM</data>
-      </time>
-
-
       <!--  Date -->
 
       <h1>Date</h1>
@@ -55,16 +46,25 @@
         <data class="year">0000</data> -
         <data class="dayOfWeek">SMTWTFS</data>
       </time>
+      <h1>Time</h1>
+      <time>
+        <data class="hours">HH</data> :
+        <data class="minutes">MM</data> :
+        <data class="seconds">SS</data>
+        <data class="amOrPM">AM/PM</data>
+      </time>
+
+
     </section>
 
     <!-- Weather -->
     <section class="weather">
-      <!--
-      <h1>Weather</h1>
-      <data value="" class="city">City</data>
-      <data value="" class="temp">Temp</data>
-      <img src="https://via.placeholder.com/150" alt="Placeholder">
-     -->
+
+      <!-- <data value="" class="city">City</data> -->
+      <!-- <data value="" class="temp">Temp</data> -->
+      <data value="" class="humidity">Humidity</data>
+      <!-- <img src="https://via.placeholder.com/150" alt="Placeholder"> -->
+
     </section>
 
   </main>
